# nbclaw

./: .gitignore  Makefile  README.md  nbclaw.toml.example  pyproject.toml
deploy/: com.nbclaw.daemon.plist
nbclaw/: __init__.py  __main__.py  agent_runner.py  commands.py  config.py  daemon.py  nl_schedule.py  scheduler.py  signal_client.py
tests/: test_integration.py  test_sse_live.py  test_units.py
