[project]
name = "nbclaw"
version = "0.1.3"
description = "No Bullshit Claw — a 24/7 Signal-driven Swival agent daemon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "swival",
    "httpx>=0.28.1",
    "croniter>=3.0.0",
]

[project.scripts]
nbclaw = "nbclaw.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nbclaw"]

[tool.hatch.build.targets.sdist]
include = [
    "nbclaw/",
    "tests/",
    "deploy/",
    "README.md",
    "LICENSE",
    "nbclaw.toml.example",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
